<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/RootContainer"
    tools:context=".ui.CheckAmountActivity">

    <ImageView
        android:id="@+id/img_logo"
        style="@style/Logo.Small"/>

    <android.support.v7.widget.GridLayout
        app:rowCount="1"
        app:columnCount="2"
        android:layout_marginBottom="@dimen/v_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/total_amount_due"
            app:layout_columnWeight="4"
            style="@style/Label" />
        <TextView
            android:id="@+id/txt_txn_amt"
            tools:text="123.45"
            android:hint="0.00"
            app:layout_columnWeight="1"
            style="@style/Text.End" />

    </android.support.v7.widget.GridLayout>

    <Button
        android:id="@+id/btn_print_check"
        android:text="@string/print_check"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/v_space"
        style="@style/Button" />

    <Button
        android:id="@+id/btn_proceed"
        android:text="@string/proceed_with_payment"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/v_space"
        style="@style/Button" />

</LinearLayout>